allow logger interception to log to absolute path